objects/CSAPEN_Additional_Customer_Information__c.object
<CustomObject>
    <fields>
        <fullName>Account_Plan_New__c</fullName>
        <label>Account Plan</label>
        <referenceTo>Account_Plan__c</referenceTo>
        <relationshipLabel>Additional Customer Information</relationshipLabel>
        <relationshipName>Additional_Customer_Information</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <reparentableMasterDetail>true</reparentableMasterDetail>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Competitors__c</fullName>
        <description>Competitiors.  Factiva Integrates.  The customer’s key competitors in the marketplace.  Factiva Integrates</description>
        <label>Customer Competitors</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Data_Source_Name__c</fullName>
        <description>Data Migration Field: Used to generate reports, rollback data changes, mass data changes in SFDC etc</description>
        <label>Data Source Name</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Deployment_No__c</fullName>
        <description>Data Migration Field: Used to generate reports, rollback data changes, mass data changes in SFDC etc</description>
        <label>Deployment No</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Industry_Trade_Shows__c</fullName>
        <description>Website address for a key Industry Trade Show (or other useful link).  http:// characters will auto populate.</description>
        <label>Industry Trade Shows (URL)</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Key_BUs_Depts_Orgs__c</fullName>
        <description>Key Business Units/Departments/Organizations.  Factiva Integrates.
The customer’s primary legal business units or public sector departments, organizations.  Factiva Integrates.</description>
        <label>Key BUs/Depts/Orgs</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Market_Intelligence__c</fullName>
        <description>The market conditions in which the customer operates (e.g. key drivers, merger acquisitions, market regulatory environment, economy, politics, vertical insights, etc.)</description>
        <label>Market Intelligence</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Other_Information__c</fullName>
        <description>Text area for miscellaneous information about the customer.</description>
        <label>Other Information</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Other_URL__c</fullName>
        <description>Field for any other relevant internal/external website link regarding the customer.</description>
        <label>Other URL</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>SiteMapIdentifier__c</fullName>
        <description>Determines how the record displays on the site map</description>
        <formula>"Additional Customer Information"</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>SiteMapIdentifier</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Source_Account_Plan_Id__c</fullName>
        <description>Data Migration Field: Used to generate reports, rollback data changes, mass data changes in SFDC etc</description>
        <label>Source Account Plan Id</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Source_Additional_Cust_Info_Id__c</fullName>
        <description>Data Migration Field: Used to generate reports, rollback data changes, mass data changes in SFDC etc</description>
        <label>Source Additional Cust Info Id</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <description>Additional Customer Information.  Factiva integrates and site map.</description>
    <label>zzAdditional Customer Information</label>
    <nameField>
        <displayFormat>ACI{00000}</displayFormat>
        <label>Addt'l Cust Info ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Additional Customer Information</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>